# optimising-solana-programs

./: .gitignore  README.md
counter/: Anchor.toml  README.md
counter-zero-copy/: Anchor.toml  README.md
counter-zero-copy/programs/counter-zero-copy/: Cargo.toml
counter-zero-copy/programs/counter-zero-copy/src/: lib.rs
counter-zero-copy/tests/: counter-zero-copy.ts
counter/programs/counter/: Cargo.toml
counter/programs/counter/src/: lib.rs
native-counter/: Cargo.toml  README.md  client.mjs
native-counter/src/: lib.rs
solana-nostd-entrypoint/: .gitignore  Cargo.toml
solana-nostd-entrypoint/unsafe-counter/: Cargo.toml  README.md  client.mjs
solana-nostd-entrypoint/unsafe-counter/src/: lib.rs
